# prose-project

./: INSTALL  README.md  TODO.md  pyproject.toml  requirements.txt  test_model.py
pyprose-0.1/: MANIFEST.in  PKG-INFO  setup.py
pyprose-0.1/src/pyprose/: __init__.py  masw.py  particleswarm.py  psvmodeling.py
pyprose-0.1/src/pyprose.egg-info/: SOURCES.txt
pyprose-0.1/src/pyprose/disp/: dispersion.c  dispersion.pyx
pyprose-0.1/src/pyprose/fd2d/: acquisition.c  acquisition.pyx  elasticproperties.c  elasticproperties.pyx  wavefields.c  wavefields.pyx
pyprose-0.1/src/pyprose/modgen/: modelgenerator.c  modelgenerator.pyx
sources/pyprose/: dispersion.py  fd2d_acquisition.py  generator.py  sources.py
sources/pyprose/model_generator/: generator.py
test_run/: fparameters.ini  plot_results.py  runinv_mpi.py
test_run/data/: iter_001.json  iter_002.json  iter_003.json  iter_004.json  iter_005.json  iter_006.json  iter_007.json  iter_008.json  iter_009.json  iter_010.json  iter_011.json  iter_012.json  iter_013.json  iter_014.json  iter_015.json  iter_016.json  iter_017.json  iter_018.json  iter_019.json  iter_020.json  iter_021.json  iter_022.json  iter_023.json  iter_024.json  iter_025.json  iter_026.json  iter_027.json  iter_028.json  iter_029.json  iter_030.json  iter_031.json  iter_032.json  iter_033.json  iter_034.json  iter_035.json  iter_036.json  iter_037.json  iter_038.json  iter_039.json  iter_040.json  (+10 more)
test_run/s_shape/: acquileft.ascii  acquiright.ascii  genmodel.py  s_shape_vs.npy
tests/: README.md
