[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "pyprose"
version = "0.1.0"
description = "A Python package for prose analysis"
readme = "README.md"
authors = [{"name" = "Your Name", "email" = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "cython",
    "mpi4py",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "flake8",
    "isort",
    "black",
]

[tool.setuptools]
package-dir = {"" = "sources"}

[tool.pytest.ini_options]
addopts = "-v -ra --showlocals"
testpaths = ["tests", "tests/tu", "tests/ti"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
